@@ -122,7 +122,7 @@ public interface MapSource {
 	public TileImageType getTileImageType();
 
 	/**
-	 * Usually this method shoud return <code>true</code> but for debugging
+	 * Usually this method should return <code>true</code> but for debugging
 	 * purposes it can be sometimes useful to deactivate local storing of tiles.
 	 */
 	public boolean allowFileStore();
