@@ -11,6 +11,8 @@
  1.9 alpha 1 (2010-11-??)
  + New atlas format: BackCountry Navigator
  + New atlas format: TwoNav (RMAP)
+ + Multi-layer maps with more than two layers are now possible
+ + New map source: OSM Hiking with relief and base 
 
  1.8 final: (2010-10-31)
  + New map source: New Zealand Topographic Maps
